crates/oopsie/tests/snapshots/erased__erased_error_json_aarch64-apple-darwin.snap
---
source: crates/oopsie/tests/erased.rs
expression: error
---
{
  "message": "Inner error happened",
  "source_chain": [
    "Error: Inner function failed (foo=true, name=Alice)"
  ],
  "diagnostics": {
    "code": "erased::common::MyError::Inner"
  },
  "location": {
    "file": "crates/oopsie/tests/common/mod.rs",
    "line": 42,
    "column": 69
  },
  "spantrace": {
    "spans": [
      {
        "metadata": {
          "name": "inner_function",
          "target": "sys",
          "level": "INFO",
          "module_path": "erased::common",
          "file": "crates/oopsie/tests/common/mod.rs",
          "line": 42
        },
        "fields": "{\"foo\":true,\"id\":42,\"name\":\"Alice\"}"
      },
      {
        "metadata": {
          "name": "outer_function",
          "target": "controller",
          "level": "INFO",
          "module_path": "erased::common",
          "file": "crates/oopsie/tests/common/mod.rs",
          "line": 42
        },
        "fields": "{\"foo\":true,\"name\":\"Alice\"}"
      }
    ]
  },
  "backtrace": {
    "frames": [
      {
        "name": "backtrace[[HASH]]::backtrace::libunwind::trace",
        "filename": "[CARGO_HOME]/registry/src/index.crates.io-[HASH]/backtrace-[VER]/src/backtrace/libunwind.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "backtrace[[HASH]]::backtrace::trace_unsynchronized::<<backtrace[[HASH]]::capture::Backtrace>::create::{closure#0}>",
        "filename": "[CARGO_HOME]/registry/src/index.crates.io-[HASH]/backtrace-[VER]/src/backtrace/mod.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "backtrace[[HASH]]::backtrace::trace::<<backtrace[[HASH]]::capture::Backtrace>::create::{closure#0}>",
        "filename": "[CARGO_HOME]/registry/src/index.crates.io-[HASH]/backtrace-[VER]/src/backtrace/mod.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "<backtrace[[HASH]]::capture::Backtrace>::create",
        "filename": "[CARGO_HOME]/registry/src/index.crates.io-[HASH]/backtrace-[VER]/src/capture.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "<backtrace[[HASH]]::capture::Backtrace>::new_unresolved",
        "filename": "[CARGO_HOME]/registry/src/index.crates.io-[HASH]/backtrace-[VER]/src/capture.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "<oopsie_core[[HASH]]::backtrace::capture::Backtrace as oopsie_core[[HASH]]::traits::Capturable>::capture",
        "filename": "[WORKSPACE]/crates/oopsie-core/src/backtrace/capture.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "<(oopsie_core[[HASH]]::backtrace::capture::Backtrace, oopsie_core[[HASH]]::spantrace::SpanTrace) as oopsie_core[[HASH]]::traits::Capturable>::capture",
        "filename": "[WORKSPACE]/crates/oopsie-core/src/traits.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "<alloc[[HASH]]::boxed::Box<(oopsie_core[[HASH]]::backtrace::capture::Backtrace, oopsie_core[[HASH]]::spantrace::SpanTrace)> as oopsie_core[[HASH]]::traits::Capturable>::capture",
        "filename": "[WORKSPACE]/crates/oopsie-core/src/traits.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "<erased[[HASH]]::common::MyErrorInnerOopsie<alloc[[HASH]]::string::String>>::build",
        "filename": "[WORKSPACE]/crates/oopsie/tests/common/mod.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "<erased[[HASH]]::common::MyErrorInnerOopsie<alloc[[HASH]]::string::String>>::fail::<()>",
        "filename": "[WORKSPACE]/crates/oopsie/tests/common/mod.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "erased[[HASH]]::common::make_error::inner_function",
        "filename": "[WORKSPACE]/crates/oopsie/tests/common/mod.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "erased[[HASH]]::common::make_error::outer_function",
        "filename": "[WORKSPACE]/crates/oopsie/tests/common/mod.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "erased[[HASH]]::common::make_error",
        "filename": "[WORKSPACE]/crates/oopsie/tests/common/mod.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "erased[[HASH]]::test_erased_error_json",
        "filename": "[WORKSPACE]/crates/oopsie/tests/erased.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "erased[[HASH]]::test_erased_error_json::{closure#0}",
        "filename": "[WORKSPACE]/crates/oopsie/tests/erased.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "[TEST_HARNESS_FRAMES_TRIMMED]",
        "filename": null,
        "line": null,
        "column": null
      }
    ]
  }
}
