crates/oopsie/tests/snapshots/erased__erased_error_json_stable_aarch64-apple-darwin.snap
---
source: crates/oopsie/tests/erased.rs
expression: error
---
{
  "message": "Inner error happened",
  "source_chain": [
    "Error: Inner function failed (foo=true, name=Alice)"
  ],
  "diagnostics": {
    "code": "erased::common::MyError::Inner"
  },
  "location": {
    "file": "crates/oopsie/tests/common/mod.rs",
    "line": 42,
    "column": 69
  },
  "spantrace": {
    "spans": [
      {
        "metadata": {
          "name": "inner_function",
          "target": "sys",
          "level": "INFO",
          "module_path": "erased::common",
          "file": "crates/oopsie/tests/common/mod.rs",
          "line": 42
        },
        "fields": "{\"foo\":true,\"id\":42,\"name\":\"Alice\"}"
      },
      {
        "metadata": {
          "name": "outer_function",
          "target": "controller",
          "level": "INFO",
          "module_path": "erased::common",
          "file": "crates/oopsie/tests/common/mod.rs",
          "line": 42
        },
        "fields": "{\"foo\":true,\"name\":\"Alice\"}"
      }
    ]
  },
  "backtrace": {
    "frames": [
      {
        "name": "backtrace::backtrace::libunwind::trace::h[HASH]",
        "filename": "[CARGO_HOME]//registry/src/index.crates.io-1949cf8c6b5b557f/backtrace-0.3.76/src/backtrace/libunwind.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "backtrace::backtrace::trace_unsynchronized::h[HASH]",
        "filename": "[CARGO_HOME]//registry/src/index.crates.io-1949cf8c6b5b557f/backtrace-0.3.76/src/backtrace/mod.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "backtrace::backtrace::trace::h[HASH]",
        "filename": "[CARGO_HOME]//registry/src/index.crates.io-1949cf8c6b5b557f/backtrace-0.3.76/src/backtrace/mod.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "backtrace::capture::Backtrace::create::h[HASH]",
        "filename": "[CARGO_HOME]//registry/src/index.crates.io-1949cf8c6b5b557f/backtrace-0.3.76/src/capture.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "backtrace::capture::Backtrace::new_unresolved::h[HASH]",
        "filename": "[CARGO_HOME]//registry/src/index.crates.io-1949cf8c6b5b557f/backtrace-0.3.76/src/capture.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "<oopsie_core::backtrace::Backtrace as oopsie_core::traits::Capturable>::capture::h[HASH]",
        "filename": "[WORKSPACE]/crates/oopsie-core/src/backtrace.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "<(A,B) as oopsie_core::traits::Capturable>::capture::h[HASH]",
        "filename": "[WORKSPACE]/crates/oopsie-core/src/traits.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "<alloc::boxed::Box<T> as oopsie_core::traits::Capturable>::capture::h[HASH]",
        "filename": "[WORKSPACE]/crates/oopsie-core/src/traits.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "erased::common::my_error_inner_oopsies::MyErrorInner<__T0>::build::h[HASH]",
        "filename": "[WORKSPACE]/crates/oopsie/tests/common/mod.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "erased::common::my_error_inner_oopsies::MyErrorInner<__T0>::fail::h[HASH]",
        "filename": "[WORKSPACE]/crates/oopsie/tests/common/mod.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "erased::common::make_error::inner_function::h[HASH]",
        "filename": "[WORKSPACE]/crates/oopsie/tests/common/mod.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "erased::common::make_error::outer_function::h[HASH]",
        "filename": "[WORKSPACE]/crates/oopsie/tests/common/mod.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "erased::common::make_error::h[HASH]",
        "filename": "[WORKSPACE]/crates/oopsie/tests/common/mod.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "erased::test_erased_error_json::h[HASH]",
        "filename": "[WORKSPACE]/crates/oopsie/tests/erased.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "erased::test_erased_error_json::{{closure}}::h[HASH]",
        "filename": "[WORKSPACE]/crates/oopsie/tests/erased.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "core::ops::function::FnOnce::call_once::h[HASH]",
        "filename": "[STDLIB]/library/core/src/ops/function.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "<fn() -> core[[HASH]]::result::Result<(), alloc[[HASH]]::string::String> as core[[HASH]]::ops::function::FnOnce<()>>::call_once",
        "filename": "[STDLIB]/library/core/src/ops/function.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "test[[HASH]]::__rust_begin_short_backtrace::<core[[HASH]]::result::Result<(), alloc[[HASH]]::string::String>, fn() -> core[[HASH]]::result::Result<(), alloc[[HASH]]::string::String>>",
        "filename": "[STDLIB]/library/test/src/lib.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "test[[HASH]]::run_test_in_process::{closure#0}",
        "filename": "[STDLIB]/library/test/src/lib.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "<core[[HASH]]::panic::unwind_safe::AssertUnwindSafe<test[[HASH]]::run_test_in_process::{closure#0}> as core[[HASH]]::ops::function::FnOnce<()>>::call_once",
        "filename": "[STDLIB]/library/core/src/panic/unwind_safe.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "std[[HASH]]::panicking::catch_unwind::do_call::<core[[HASH]]::panic::unwind_safe::AssertUnwindSafe<test[[HASH]]::run_test_in_process::{closure#0}>, core[[HASH]]::result::Result<(), alloc[[HASH]]::string::String>>",
        "filename": "[STDLIB]/library/std/src/panicking.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "std[[HASH]]::panicking::catch_unwind::<core[[HASH]]::result::Result<(), alloc[[HASH]]::string::String>, core[[HASH]]::panic::unwind_safe::AssertUnwindSafe<test[[HASH]]::run_test_in_process::{closure#0}>>",
        "filename": "[STDLIB]/library/std/src/panicking.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "std[[HASH]]::panic::catch_unwind::<core[[HASH]]::panic::unwind_safe::AssertUnwindSafe<test[[HASH]]::run_test_in_process::{closure#0}>, core[[HASH]]::result::Result<(), alloc[[HASH]]::string::String>>",
        "filename": "[STDLIB]/library/std/src/panic.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "test[[HASH]]::run_test_in_process",
        "filename": "[STDLIB]/library/test/src/lib.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "test[[HASH]]::run_test::{closure#0}",
        "filename": "[STDLIB]/library/test/src/lib.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "test[[HASH]]::run_test::{closure#1}",
        "filename": "[STDLIB]/library/test/src/lib.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "std[[HASH]]::sys::backtrace::__rust_begin_short_backtrace::<test[[HASH]]::run_test::{closure#1}, ()>",
        "filename": "[STDLIB]/library/std/src/sys/backtrace.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "std[[HASH]]::thread::lifecycle::spawn_unchecked::<test[[HASH]]::run_test::{closure#1}, ()>::{closure#1}::{closure#0}",
        "filename": "[STDLIB]/library/std/src/thread/lifecycle.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "<core[[HASH]]::panic::unwind_safe::AssertUnwindSafe<std[[HASH]]::thread::lifecycle::spawn_unchecked<test[[HASH]]::run_test::{closure#1}, ()>::{closure#1}::{closure#0}> as core[[HASH]]::ops::function::FnOnce<()>>::call_once",
        "filename": "[STDLIB]/library/core/src/panic/unwind_safe.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "std[[HASH]]::panicking::catch_unwind::do_call::<core[[HASH]]::panic::unwind_safe::AssertUnwindSafe<std[[HASH]]::thread::lifecycle::spawn_unchecked<test[[HASH]]::run_test::{closure#1}, ()>::{closure#1}::{closure#0}>, ()>",
        "filename": "[STDLIB]/library/std/src/panicking.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "std[[HASH]]::panicking::catch_unwind::<(), core[[HASH]]::panic::unwind_safe::AssertUnwindSafe<std[[HASH]]::thread::lifecycle::spawn_unchecked<test[[HASH]]::run_test::{closure#1}, ()>::{closure#1}::{closure#0}>>",
        "filename": "[STDLIB]/library/std/src/panicking.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "std[[HASH]]::panic::catch_unwind::<core[[HASH]]::panic::unwind_safe::AssertUnwindSafe<std[[HASH]]::thread::lifecycle::spawn_unchecked<test[[HASH]]::run_test::{closure#1}, ()>::{closure#1}::{closure#0}>, ()>",
        "filename": "[STDLIB]/library/std/src/panic.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "std[[HASH]]::thread::lifecycle::spawn_unchecked::<test[[HASH]]::run_test::{closure#1}, ()>::{closure#1}",
        "filename": "[STDLIB]/library/std/src/thread/lifecycle.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "<std[[HASH]]::thread::lifecycle::spawn_unchecked<test[[HASH]]::run_test::{closure#1}, ()>::{closure#1} as core[[HASH]]::ops::function::FnOnce<()>>::call_once::{shim:vtable#0}",
        "filename": "[STDLIB]/library/core/src/ops/function.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "<alloc[[HASH]]::boxed::Box<dyn core[[HASH]]::ops::function::FnOnce<(), Output = ()> + core[[HASH]]::marker::Send> as core[[HASH]]::ops::function::FnOnce<()>>::call_once",
        "filename": "[STDLIB]/library/alloc/src/boxed.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "<std[[HASH]]::sys::thread::unix::Thread>::new::thread_start",
        "filename": "[STDLIB]/library/std/src/sys/thread/unix.rs",
        "line": 42,
        "column": 69
      },
      {
        "name": "[OS_TAIL]",
        "filename": null,
        "line": null,
        "column": null
      }
    ]
  }
}
